// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render badge correctly 1`] = `
<div class="mi-badge mi-badge--top-right mi-badge--fixed">
  1
</div>
`;

exports[`should render default slot correctly 1`] = `
"<i class="mi-badge__wrapper mi-icon mi-icon-success">Default Slot
  <!---->
  <!---->
</i>"
`;

exports[`should render dot correctly 1`] = `
<div class="mi-badge mi-badge--top-right mi-badge--dot mi-badge--fixed">
</div>
`;

exports[`should render icon with builtin icon name correctly 1`] = `
"<i class="mi-badge__wrapper mi-icon mi-icon-success">
  <!---->
  <!---->
  <!---->
</i>"
`;

exports[`should render icon with local image correctly 1`] = `
"<i class="mi-badge__wrapper mi-icon">
  <!----><img class="mi-icon__image" src="/assets/icon.jpg">
  <!---->
</i>"
`;

exports[`should render icon with url name correctly 1`] = `
"<i class="mi-badge__wrapper mi-icon">
  <!----><img class="mi-icon__image" src="https://cdn.jsdelivr.net/gh/wuxingxi888/CDN_IMG_BED/cat.jpeg">
  <!---->
</i>"
`;
